force-app/main/default/objects/InSituGen__InSitu_AS_View__c/InSituGen__InSitu_AS_View__c.object-meta.xml
<CustomObject>
    <description>An iTools Configuration Manager custom object that contains information used to define configurable views for iTools apps.</description>
    <label>iTools AppSetting View</label>
    <nameField>
        <displayFormat>ASV-{0000}</displayFormat>
        <label>iTools AppSetting View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iTools AppSetting Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>