force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Application_Setting__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Application_Setting__c</fullName>
    <label>Application Setting</label>
    <referenceTo>InSituGen__InSitu_AppSetting__c</referenceTo>
    <relationshipLabel>iTools AppSetting Views</relationshipLabel>
    <relationshipName>InSitu_AppSetting_Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>