force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Criteria__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Criteria__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>