force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Label__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>