force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Scope_Indicator__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_Indicator__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Indicates if the setting value is global (1), profile (3) or a user specific (5).</description>
    <inlineHelpText>1 = Global 
3 = Profile 
5 = User Specific</inlineHelpText>
    <label>Scope Indicator</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>