force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Scope_RoleID__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_RoleID__c</fullName>
    <label>RoleID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>