force-app/main/default/objects/InSituGen__InSitu_AS_View__c/fields/InSituGen__Scope_User__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the user for which the user specific view applies. Must be set when Scope Indicator = 5 and null when Scope Indicator = 1 or 3.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InSitu_AppSetting_Views</relationshipName>
    <type>Lookup</type>
</CustomField>